fix contact list

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,19 @@
       </div>
     </nav>
     </div>
+
+  <div class="container">
+    <div class="col-6">
+      <h4 class="display-4"> Contact</h4>
+      <form action="">
+        <input placeholder="Name">
+        <input style="margin-top: 20px;" placeholder="Email" class="form-control">
+        <input style="margin-top: 20px;" placeholder="Name" class="form-control">
+      </form>
+    </div>
+  </div>
+</div>
+
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
