--- a/portfolio.html
+++ b/portfolio.html
@@ -56,24 +56,36 @@
       </div>
 
       <div class="col-3">
-      <div class="card-header">
+      <div class="card-header ">
         <h4>Personal Fitness</h4>
         <img class="img-fluid" src="https://images.squarespace-cdn.com/content/50acef9fe4b079767f9a7151/1565999958284-2GYHILNCQ9H83UQHODVT/effdff2672e9c13e15362de861d46f20-daily-motivation-crossfit-motivation.jpg?content-type=image%2Fjpeg" alt="Workout">
       </div>
       </div>
       <div class="card-body">
         <ul>
-          <li>Cashiering</li>
-          <li>Cutting fruits</li>
-          <li>Cooking</li>
-          <li>Making drinks</li>
-          <li>Cook food</li>
-          <li>Manage inventory</li>
-          <li>Construction</li>
+          <li>Planning routines</li>
+          <li>Manage equipment</li>
+          <li>Consulting</li>
         </ul>
+      </div>
+
+      <div class="col-3">
+        <div class="card-header my-3">
+          <h4>Life Guard</h4>
+          <img class="img-fluid" src="https://ppymca.org/images/default-source/ppymca/careers/ymca_lifeguard.png?sfvrsn=e2ac94a1_2" alt="Lifeguard">
+        </div>
+        </div>
+        <div class="card-body">
+          <ul>
+            <li>Make sure no one dies</li>
+            <li>Test</li>
+            <li>Alert</li>
+          </ul>
+        </div>
       </div>
     </div>
     </div>
+
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
