--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>My Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-success">
       <a class="navbar-brand" href="#">Jimmy Ngo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,7 +32,7 @@
     </nav>
     </div>
 
-    <div class="container">
+    <div class="container contact-form">
       <h1 class="display-4"> My Experience</h1>
 
       <div class="row">
@@ -43,7 +44,7 @@
       </div>
       </div>
 
-      <div class="card-body">
+      <div class="card-body my-4">
         <ul>
           <li>Cashiering</li>
           <li>Cutting fruits</li>
@@ -61,7 +62,7 @@
         <img class="img-fluid" src="https://images.squarespace-cdn.com/content/50acef9fe4b079767f9a7151/1565999958284-2GYHILNCQ9H83UQHODVT/effdff2672e9c13e15362de861d46f20-daily-motivation-crossfit-motivation.jpg?content-type=image%2Fjpeg" alt="Workout">
       </div>
       </div>
-      <div class="card-body">
+      <div class="card-body my-4">
         <ul>
           <li>Planning routines</li>
           <li>Manage equipment</li>
@@ -70,7 +71,7 @@
       </div>
 
       <div class="col-3">
-        <div class="card-header my-3">
+        <div class="card-header">
           <h4>Life Guard</h4>
           <img class="img-fluid" src="https://ppymca.org/images/default-source/ppymca/careers/ymca_lifeguard.png?sfvrsn=e2ac94a1_2" alt="Lifeguard">
         </div>
