fixed resolution and images

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>My Portfolio</title>
+    
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-success">
@@ -30,10 +30,8 @@
         </ul>
       </div>
     </nav>
-
     <div class="container contact-form">
       <h1 class="display-4">About Me</h1>
-
       <div class="row">
         <div class="col-3">
           <img class="img-fluid" src="https://images-na.ssl-images-amazon.com/images/I/81%2BikGeEBlL._AC_SL1500_.jpg" alt="Picture of me">
@@ -41,7 +39,6 @@
         <p class="col-9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam impedit dolor deserunt rem quis laudantium ea, consectetur optio voluptatem dignissimos exercitationem harum minima unde natus? Omnis laboriosam, reiciendis sed nam obcaecati tempora optio. Necessitatibus, placeat minima. Architecto maiores, voluptatibus impedit ab eos iusto dolor praesentium sed sint officia, ipsum aut aliquid porro saepe minus rerum enim officiis temporibus natus, sequi fugit dignissimos! A itaque quibusdam pariatur? Tempore nulla necessitatibus, autem, deserunt quae accusantium ea magnam, velit dolorem vero facere recusandae inventore consectetur dolorum ratione illum! Consectetur, quas illo id voluptas deserunt quasi ipsum porro voluptatum animi reprehenderit unde cupiditate? Nostrum ipsam aperiam fugit molestias veritatis nesciunt eius modi animi. Quisquam animi itaque obcaecati impedit molestiae temporibus quo. Assumenda at nostrum perspiciatis voluptatum amet, fuga facere. Consequatur, quia autem perspiciatis id dicta rerum alias ad tempore consectetur cupiditate assumenda dolores, eligendi velit, cum fuga eaque blanditiis quidem provident delectus nisi deserunt quo reiciendis! Suscipit tempora quidem nihil praesentium labore doloribus delectus, aliquid impedit hic optio ad, ut ab minima nisi iste in deleniti fugiat itaque pariatur inventore veritatis dicta, soluta voluptatem? Aut dolore suscipit fugit saepe quisquam cum in dolor illo fugiat enim? Alias possimus ut dolor facilis dolores incidunt doloremque provident quas maxime dolorum magnam aliquid unde aspernatur est hic et, odit pariatur consectetur quis, harum libero. Illo labore delectus incidunt. Excepturi illo, ut neque temporibus nam explicabo a harum sed veniam labore omnis. Quisquam, iure aut eaque inventore eum unde assumenda voluptas? Reprehenderit eos quis omnis dolorum corrupti velit. Molestias in excepturi esse unde voluptatem, maiores sed illo mollitia nostrum voluptatibus, velit error sit amet quibusdam at nemo quidem. Optio architecto quod praesentium aut voluptatibus molestiae obcaecati corrupti libero, fugiat earum fugit omnis aliquam sequi corporis assumenda odit veritatis nostrum quasi.</p>
       </div>
     </div>
-    
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
