--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>My Portfolio</title>
@@ -34,17 +34,15 @@
 
     <div class="container contact-form">
       <h1 class="display-4"> My Experience</h1>
-
       <div class="row">
-
-      <div class="col-3">
+      <div class="col-lg-3 col-md-6">
       <div class="card-header">
         <h4>Milk Tea Shop</h4>
-        <img class="img-fluid" src="https://media.firebox.com/product/9207/column_grid_10/pearl-boba-tea-light_36793.jpg" alt="boba">
+        <img class="img-fluid" src="./assets/images/boba.jpg" alt="boba">
       </div>
       </div>
 
-      <div class="card-body my-4">
+      <div class="card-body my-4 col-lg-3 col-md-6 col-sm-12">
         <ul>
           <li>Cashiering</li>
           <li>Cutting fruits</li>
@@ -56,27 +54,29 @@
         </ul>
       </div>
 
-      <div class="col-3">
+      <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="card-header ">
         <h4>Personal Fitness</h4>
-        <img class="img-fluid" src="https://images.squarespace-cdn.com/content/50acef9fe4b079767f9a7151/1565999958284-2GYHILNCQ9H83UQHODVT/effdff2672e9c13e15362de861d46f20-daily-motivation-crossfit-motivation.jpg?content-type=image%2Fjpeg" alt="Workout">
+        <img class="img-fluid" src="./assets/images/fitness.jpg" alt="Workout">
       </div>
       </div>
-      <div class="card-body my-4">
+      <div class="card-body my-4 col-lg-3 col-md-6 col-sm-12">
         <ul>
           <li>Planning routines</li>
           <li>Manage equipment</li>
           <li>Consulting</li>
         </ul>
       </div>
+    </div>
+    <div class="row">
 
-      <div class="col-3">
-        <div class="card-header">
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="card-header ">
           <h4>Life Guard</h4>
-          <img class="img-fluid" src="https://ppymca.org/images/default-source/ppymca/careers/ymca_lifeguard.png?sfvrsn=e2ac94a1_2" alt="Lifeguard">
+          <img class="img-fluid" src="./assets/images/lifeguard.png" alt="Lifeguard">
         </div>
         </div>
-        <div class="card-body">
+        <div class="card-body my-4 col-lg-3 col-md-6 col-sm-12">
           <ul>
             <li>Make sure no one dies</li>
             <li>Test</li>
@@ -86,8 +86,6 @@
       </div>
     </div>
     </div>
-
-    
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
