--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>My Portfolio</title>
   </head>
   <body>
+    <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-success">
       <a class="navbar-brand" href="#">Jimmy Ngo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,25 +31,27 @@
         </ul>
       </div>
     </nav>
-    </div>
+  </header>
 
+  <main>
   <div class="container contact-form">
-    <div class="col-6">
+    <div class="col-lg-6 col-md-6 col-sm-6">
+      <section>
       <h1 class="display-4"> Contact</h1>
-      <form action="">
-        <label for="Name" style="margin-top: 20px;">Name</label>
+      <form>
+        <label for="name" style="margin-top: 20px;">Name</label>
         <input class="form-control">
 
-        <label for="Email" style="margin-top: 20px;">Email</label>
+        <label for="email" style="margin-top: 20px;">Email</label>
         <input class="form-control">
-        <label for="Message" style="margin-top: 20px;">Message</label>
+        <label for="message" style="margin-top: 20px;">Message</label>
         <textarea class="form-control" rows="5"></textarea>
-
         <button style="margin-top: 20px;" class="btn btn-primary">Submit</button>
+      </section>
       </form>
       </div>
   </div>
-</div>
+</main>
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
