--- a/portfolio.html
+++ b/portfolio.html
@@ -83,6 +83,43 @@
             <li>Alert</li>
           </ul>
         </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="card-header ">
+            <a href="https://still-tundra-59801.herokuapp.com/">Note Taker</a>
+            <img class="img-fluid" src="./assets/images/noteTaker.png" alt="Note Taker">
+          </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="card-header ">
+              <a href=" https://drive.google.com/file/d/1UylkNglt-sHhsY2gS32AaoeYD2BTbcjw/view">Team Generator</a>
+              <img class="img-fluid"  src="./assets/images/teamGenerator.png" alt="Team Generator">
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <div class="card-header ">
+                <a href="https://guillermo-martin.github.io/project1/">Pet Adoption</a>
+                <img class="img-fluid" src="./assets/images/petAdoption.jpg" alt="Pet Adoption">
+              </div>
+              </div>
+              
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="card-header ">
+                  <a href=" https://drive.google.com/file/d/1wVD7NTrioZ5IAEILsE9BGJ0xvMOjTrax/view">Employment Management</a>
+                  <img class="img-fluid" src="./assets/images/employeeManagement.png" alt="Employment Manage">
+                </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <div class="card-header ">
+                    <a href="https://project02blog.herokuapp.com/">Blog Site</a>
+                    <img class="img-fluid" src="./assets/images/blogSite.png" alt="Blog Site">
+                  </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="card-header ">
+                      <a href="https://floating-retreat-91249.herokuapp.com/">Fitness Tracker</a>
+                      <img class="img-fluid" src="./assets/images/fitnessTracker.png" alt="Fitness Tracker">
+                    </div>
+                    </div>
       </div>
     </div>
     </div>
